--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Architect theme
-description: Architect is a theme for GitHub Pages.
+title: Ziqi(Charles) Zhang (张子褀)
+description: Homepage
 show_downloads: true
-google_analytics:
+#google_analytics:
 theme: jekyll-theme-architect
